<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_gravity="top"
    android:background="@color/blanco"
    android:gravity="top|center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rojo" >

        <ImageView
            android:id="@+id/imageCuenta"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dip"
            android:layout_marginBottom="2dip"
            android:contentDescription="@string/imagenes"
            android:maxHeight="30dp"
            android:maxWidth="30dp"
            android:src="@drawable/ico_anotacion" />

        <TextView
            android:id="@+id/lblTituloHomeCuenta"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@color/rojo"
            android:gravity="left"
            android:padding="5dip"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:text="@string/txtbotonnuevomovimiento"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/blanco"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView021"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dip"
        android:background="@drawable/rectangulo"
        android:gravity="center"
        android:padding="5dip"
        android:text="@string/info23"
        android:textColor="@color/negro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dip"
            android:gravity="center"
            android:text="@string/info24"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grisoscuro"
            android:textSize="10dip" />

        <ImageButton
            android:id="@+id/btnIngreso"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_marginLeft="13dip"
            android:background="@color/blanco"
            android:contentDescription="@string/cambiarimagen"
            android:src="@drawable/menos" />

        <EditText
            android:id="@+id/txtImporte"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="9dip"
            android:layout_marginTop="3dip"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="12"
            android:padding="5dip"
            android:textSize="24dip"
            android:textStyle="bold"
            android:width="20dip" >

            <requestFocus />

        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/gris"
            android:textSize="20dip"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="56dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dip"
            android:gravity="top"
            android:lines="2"
            android:text="@string/info26"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grisoscuro"
            android:textSize="10dip" />

        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dip"
            android:layout_marginRight="9dip"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:maxLength="20"
            android:padding="5dip" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="@string/info27"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grisoscuro"
            android:textSize="10dip" />

        <Spinner
            android:id="@+id/spnCategorias"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="9dip"
            android:padding="5dip" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCategoriaDesdeMovimiento"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="right"
        android:layout_marginRight="9dip"
        android:text="@string/btnAltaCategoria"
        android:textSize="10dip" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/info30"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/grisoscuro"
        android:textSize="10dip" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/blanco"
        android:gravity="bottom" >

        <TextView
            android:id="@+id/btnAltaMovimiento"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip"
            android:layout_weight="0.97"
            android:background="@color/gris"
            android:gravity="center"
            android:text="@string/info28"
            android:textColor="@color/blanco" />

    </LinearLayout>

        </LinearLayout>