<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@color/blanco"
    android:gravity="top|center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rojo" >

        <ImageView
            android:id="@+id/imageCuenta"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dip"
            android:layout_marginBottom="2dip"
            android:contentDescription="@string/imagenes"
            android:maxHeight="30dp"
            android:maxWidth="30dp"
            android:src="@drawable/categoria_coche" />

        <TextView
            android:id="@+id/lblTituloHomeCuenta"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@color/rojo"
            android:gravity="left"
            android:padding="5dip"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:text="@string/movPendientes"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/blanco"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/blanco"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dip"
            android:layout_marginTop="5dip"
            android:gravity="right"
            android:text="@string/ultimos25"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10dip" />

        <ListView
            android:id="@+id/lstMov"
            android:layout_width="fill_parent"
            android:layout_height="382dp"
            android:layout_margin="5dip"
            android:background="@color/blanco"
            android:cacheColorHint="@color/blanco"
            android:padding="5dip" >

        </ListView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/blanco"
            android:gravity="bottom" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginLeft="1dip"
                android:layout_marginRight="1dip"
                android:layout_weight="0.97"
                android:background="@color/gris"
                android:gravity="center"
                android:text="@string/info32"
                android:textColor="@color/blanco" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
